--- a/launch/filter_parameters.yaml
+++ b/launch/filter_parameters.yaml
@@ -1,13 +1,13 @@
-fixed_frame: /world
-camera_frame: /camera_rgb_optical_frame
+fixed_frame: robot1/base_link
+camera_frame: robot1/kinect_rgb_optical_link
 camera_offset:
   translation: [0.0, 0.0, 0.0]
   rotation:    [0.0, 0.0, 0.0, 1.0]
 # There is one entry for each URDIF that should be filtered
 models: 
 - model: "robot_description"
-  tf_prefix: "/EXAMPLE"
+  tf_prefix: "robot1"
 # how far in front of the robot model is still deleted? (e.g. 0.05 = 5cm)
 depth_distance_threshold: 0.05
-show_gui: false
-filter_replace_value: 5.0
+show_gui: true
+filter_replace_value: 0.0
