--- a/launch/filter_parameters.yaml
+++ b/launch/filter_parameters.yaml
@@ -5,7 +5,7 @@ camera_offset:
   rotation:    [0.0, 0.0, 0.0, 1.0]
 # There is one entry for each URDIF that should be filtered
 models: 
-- model: "robot_description"
+- model: "old_robot_description"
   tf_prefix: "robot1"
 # how far in front of the robot model is still deleted? (e.g. 0.05 = 5cm)
 depth_distance_threshold: 0.05
